--- a/src/main/resources/auto-code-ui/ui/index.html
+++ b/src/main/resources/auto-code-ui/ui/index.html
@@ -52,16 +52,22 @@
 
         <div class="navBar layui-side-scroll">
             <ul class="layui-nav layui-nav-tree" id="menus">
-                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/auto-code-ui/ui/global.html"><i
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="global.html"><i
                         class="layui-icon layui-icon-website" data-icon="layui-icon layui-icon-website"></i><cite>全局配置</cite></a></li>
+
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="simple.html"><i
+                        class="layui-icon layui-icon-diamond" data-icon="layui-icon layui-icon-diamond"></i><cite>单表生成代码</cite></a></li>
+
                 <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
-                        class="layui-icon layui-icon-diamond" data-icon="layui-icon layui-icon-diamond"></i><cite>单表</cite></a></li>
+                        class="layui-icon layui-icon-top" data-icon="layui-icon layui-icon-top"></i><cite>一对一生成代码</cite></a></li>
+
                 <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
-                        class="layui-icon layui-icon-top" data-icon="layui-icon layui-icon-top"></i><cite>一对一</cite></a></li>
+                        class="layui-icon layui-icon-theme" data-icon="layui-icon layui-icon-theme"></i><cite>一对多生成代码</cite></a></li>
+
                 <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
-                        class="layui-icon layui-icon-theme" data-icon="layui-icon layui-icon-theme"></i><cite>一对多</cite></a></li>
-                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
-                        class="layui-icon layui-icon-unlink" data-icon="layui-icon layui-icon-unlink"></i><cite>多对多</cite></a></li>
+                        class="layui-icon layui-icon-unlink" data-icon="layui-icon layui-icon-unlink"></i><cite>多对多生成代码</cite></a></li>
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="../../swagger-ui.html"><i
+                        class="layui-icon layui-icon-website" data-icon="layui-icon layui-icon-website"></i><cite>swagger api</cite></a></li>
             </ul>
         </div>
     </div>
