--- a/src/main/resources/auto-code-ui/ui/global.html
+++ b/src/main/resources/auto-code-ui/ui/global.html
@@ -16,7 +16,7 @@
 <div class="page-container">
     <form class="layui-form layui-form-pane" >
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend>全局参数配置(建议配置在配置文件中.页面配置,当项目重启,参数会回滚到初始值)</legend>
+            <legend>全局参数配置(建议配置在配置文件中.在页面配置,当项目重启设置将失效)</legend>
         </fieldset>
         <div class="layui-form-item">
             <label class="layui-form-label">生成代码的项目路径</label>
@@ -104,7 +104,6 @@
 
         <div class="layui-form-item" style="text-align: center">
             <button class="layui-btn" lay-submit="" lay-filter="save-data">提交</button>
-            <input type="button" class="layui-btn"  onclick="myback()" value="返回" />
         </div>
     </form>
 </div>
