--- a/src/main/resources/auto-code-ui/ui/index.html
+++ b/src/main/resources/auto-code-ui/ui/index.html
@@ -58,14 +58,17 @@
                 <li class="layui-nav-item"><a href="javascript:void(0)" data-url="simple.html"><i
                         class="layui-icon layui-icon-diamond" data-icon="layui-icon layui-icon-diamond"></i><cite>单表生成代码</cite></a></li>
 
-                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="one-to-one.html"><i
                         class="layui-icon layui-icon-top" data-icon="layui-icon layui-icon-top"></i><cite>一对一生成代码</cite></a></li>
 
-                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="one-to-many.html"><i
                         class="layui-icon layui-icon-theme" data-icon="layui-icon layui-icon-theme"></i><cite>一对多生成代码</cite></a></li>
 
-                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="/swagger-ui.html#/"><i
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="many-to-many.html"><i
                         class="layui-icon layui-icon-unlink" data-icon="layui-icon layui-icon-unlink"></i><cite>多对多生成代码</cite></a></li>
+
+                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="simple_batch.html"><i
+                        class="layui-icon layui-icon-diamond" data-icon="layui-icon layui-icon-diamond"></i><cite>单表批量生成</cite></a></li>
                 <li class="layui-nav-item"><a href="javascript:void(0)" data-url="../../swagger-ui.html"><i
                         class="layui-icon layui-icon-website" data-icon="layui-icon layui-icon-website"></i><cite>swagger api</cite></a></li>
             </ul>
