--- a/src/main/resources/auto-code-ui/ui/many-to-many.html
+++ b/src/main/resources/auto-code-ui/ui/many-to-many.html
@@ -231,7 +231,8 @@
                             ,{field: 'remarks', title: '备注(可修改)',edit: 'text'}
                             ,{field: 'key', title: '是否主键'}
                         ]]
-                        , data:d.allColumns
+                        , data:d.allColumns,
+                        limit:90
                     });
                 }
             }else{
