--- a/src/main/resources/auto-code-ui/ui/index.html
+++ b/src/main/resources/auto-code-ui/ui/index.html
@@ -69,8 +69,8 @@
 
                 <li class="layui-nav-item"><a href="javascript:void(0)" data-url="simple_batch.html"><i
                         class="layui-icon layui-icon-diamond" data-icon="layui-icon layui-icon-diamond"></i><cite>单表批量生成</cite></a></li>
-                <li class="layui-nav-item"><a href="javascript:void(0)" data-url="../../swagger-ui.html"><i
-                        class="layui-icon layui-icon-website" data-icon="layui-icon layui-icon-website"></i><cite>swagger api</cite></a></li>
+                <!--<li class="layui-nav-item"><a href="javascript:void(0)" data-url="../../swagger-ui.html"><i
+                        class="layui-icon layui-icon-website" data-icon="layui-icon layui-icon-website"></i><cite>swagger api</cite></a></li>-->
             </ul>
         </div>
     </div>
