--- a/src/main/resources/auto-code-ui/ui/many-to-many.html
+++ b/src/main/resources/auto-code-ui/ui/many-to-many.html
@@ -87,7 +87,7 @@
             <label class="layui-form-label">请选择外表</label>
             <div class="layui-input-block">
                 <select name="foreign.dataName" id="foreign.dataName" xm-select="foreign.dataName" xm-select-radio="" xm-select-search="" lay-verify="required">
-                    <option >test</option>
+                    <option >如无表,请刷新浏览器后再查看</option>
                 </select>
             </div>
         </div>
@@ -148,7 +148,7 @@
             <label class="layui-form-label">请选择第三表</label>
             <div class="layui-input-block">
                 <select name="thirdparty.dataName" id="thirdparty.dataName" xm-select="thirdparty.dataName" xm-select-radio="" xm-select-search="" lay-verify="required">
-                    <option >test</option>
+                    <option >如无表,请刷新浏览器后再查看</option>
                 </select>
             </div>
         </div>
