--- a/src/main/resources/auto-code-ui/ui/simple_batch.html
+++ b/src/main/resources/auto-code-ui/ui/simple_batch.html
@@ -25,7 +25,7 @@
             <label class="layui-form-label">请选择表</label>
             <div class="layui-input-block">
                 <select name="dataName" id="dataName" xm-select="dataName"  xm-select-search="" lay-verify="required">
-                    <option >test</option>
+                    <option >如无表,请刷新浏览器后再查看</option>
                 </select>
             </div>
         </div>
