--- a/src/main/resources/auto-code-ui/ui/one-to-one.html
+++ b/src/main/resources/auto-code-ui/ui/one-to-one.html
@@ -28,7 +28,7 @@
             <label class="layui-form-label">请选择主表</label>
             <div class="layui-input-block">
                 <select name="primary.dataName" id="primary.dataName" xm-select="primary.dataName" xm-select-radio="" xm-select-search="" lay-verify="required">
-                    <option >test</option>
+                    <option >如无表,请刷新浏览器后再查看</option>
                 </select>
             </div>
         </div>
@@ -87,7 +87,7 @@
             <label class="layui-form-label">请选择外表</label>
             <div class="layui-input-block">
                 <select name="foreign.dataName" id="foreign.dataName" xm-select="foreign.dataName" xm-select-radio="" xm-select-search="" lay-verify="required">
-                    <option >test</option>
+                    <option >如无表,请刷新浏览器后再查看</option>
                 </select>
             </div>
         </div>
