--- a/src/main/resources/auto-code-ui/ui/index.html
+++ b/src/main/resources/auto-code-ui/ui/index.html
@@ -19,6 +19,20 @@
                 window.location.reload();
             })
         }
+        function myConfirm(msg,callback1,callback2) {
+            var index=layer.confirm(msg, {
+                btn: ['确定','取消'] //按钮
+            }, function(){
+                if(callback1){
+                    callback1()
+                }
+                layer.close(index)
+            }, function(){
+                if(callback2){
+                    callback2()
+                }
+            });
+        }
     </script>
 
 </head>
